Checking in so scott can look at what I have

--- a/gradle.properties
+++ b/gradle.properties
@@ -29,3 +29,7 @@ gradleVersion=8.0.2
 # See https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library for details.
 # suppress inspection "UnusedProperty"
 kotlin.stdlib.default.dependency = false
+
+ktor_version=2.3.2
+logback_version=1.2.11
+kotlin_version=1.8.10
